--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Our Feline Friends</h1>
     <p>Eventually we will put cat pictures here.</p>
     <hr>
+    <h1>Se logro hacer el fork y pull request sin problemas</h1>
   </body>
 </html>
